fix(NavItem): set min-width of 0 for active NavItems
Elements inside flexboxes have a default min-width of auto, making block
elements take too much space. In case we expect arbitrarily large
content (e.g. entity names) as part of breadcrumbs, we need to set it to
0. This happens for active elements.

We let the default min-width stay at auto for non-active elements to prevent them
from shrinking when another element takes up a lot of space.

related to OPT-3899

--- a/client/src/modules/components/navigation/NavItem/NavItem.scss
+++ b/client/src/modules/components/navigation/NavItem/NavItem.scss
@@ -7,8 +7,8 @@
   display: flex;
   align-items: center;
 
-  &:first-child {
-    min-width: 80px;
+  &.active {
+    min-width: 0;
   }
 
   &:last-child {
